--- a/index.html
+++ b/index.html
@@ -19,22 +19,23 @@
   </head>
 
   <body>
-    <header class="container">
-      <nav class="main-nav">
-        <a href="./index.html" class="logo">
-          <span class="logo-start">WEB</span>STUDIO</a
-        >
+    <header>
+      <div class="container">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo">
+            <span class="logo-start">WEB</span>STUDIO</a
+          >
 
-        <ul class="site-nav list">
-          <li class="item">
-            <a class="link" href="./index.html"> Studio</a>
-          </li>
-          <li class="item">
-            <a class="link" href="./portfolio.html"> Portfolio</a>
-          </li>
-          <li class="item"><a class="link" href=""> Contacts </a></li>
-        </ul>
-
+          <ul class="site-nav list">
+            <li class="item">
+              <a class="link" href="./index.html"> Studio</a>
+            </li>
+            <li class="item">
+              <a class="link" href="./portfolio.html"> Portfolio</a>
+            </li>
+            <li class="item"><a class="link" href=""> Contacts </a></li>
+          </ul>
+        </nav>
         <ul class="contacts list">
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
@@ -45,128 +46,157 @@
             <a class="link" href="tel:+110001111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
 
     <main>
       <!-- Hero -->
-      <section class="container hero">
-        <h1 class="hero-title">Effective Solutions for your business</h1>
-        <button class="button order primary" type="button">
-          Order Service
-        </button>
+      <section class="hero">
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for your business</h1>
+          <button class="button order primary" type="button">
+            Order Service
+          </button>
+        </div>
       </section>
 
       <!-- Features  -->
-      <section class="container">
-        <h2 class="visually-hidden">Features</h2>
-        <ul class="list features">
-          <li class="item">
-            <h3 class="feature-ttl">Strategy</h3>
-            <p class="feature-txt">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
+      <section>
+        <div class="container">
+          <h2 class="visually-hidden">Features</h2>
+          <ul class="list features">
+            <li class="item">
+              <h3 class="feature-ttl">Strategy</h3>
+              <p class="feature-txt">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
+            </li>
 
-          <li class="item">
-            <h3 class="feature-ttl">Punctuality</h3>
-            <p class="feature-txt">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
+            <li class="item">
+              <h3 class="feature-ttl">Punctuality</h3>
+              <p class="feature-txt">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
+            </li>
 
-          <li class="item">
-            <h3 class="feature-ttl">Diligence</h3>
-            <p class="feature-txt">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
+            <li class="item">
+              <h3 class="feature-ttl">Diligence</h3>
+              <p class="feature-txt">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
+            </li>
 
-          <li class="item">
-            <h3 class="feature-ttl">Technologies</h3>
-            <p class="feature-txt">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+            <li class="item">
+              <h3 class="feature-ttl">Technologies</h3>
+              <p class="feature-txt">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- What are we doing -->
-      <section class="container">
-        <h2 class="section-ttl">What are we doing</h2>
-        <ul class="category list">
-          <li class="item">
-            <a href="">
-              <img src="./images/pic1.jpg" alt="desktop websites" width="360" />
-            </a>
-          </li>
-          <li class="item">
-            <a href="">
-              <img src="./images/pic2.jpg" alt="communication" width="360" />
-            </a>
-          </li>
-          <li class="item">
-            <a href="">
-              <img src="./images/pic3.jpg" alt="mobile websites" width="360" />
-            </a>
-          </li>
-        </ul>
+      <section>
+        <div class="container">
+          <h2 class="section-ttl">What are we doing</h2>
+          <ul class="category list">
+            <li class="item">
+              <a href="">
+                <img
+                  src="./images/pic1.jpg"
+                  alt="desktop websites"
+                  width="360"
+                />
+              </a>
+            </li>
+            <li class="item">
+              <a href="">
+                <img src="./images/pic2.jpg" alt="communication" width="360" />
+              </a>
+            </li>
+            <li class="item">
+              <a href="">
+                <img
+                  src="./images/pic3.jpg"
+                  alt="mobile websites"
+                  width="360"
+                />
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!-- Team -->
-      <section class="container team">
-        <h2 class="section-ttl">Our Team</h2>
-        <ul class="team-cards list centered">
-          <li class="item">
-            <img
-              src="./images/guerrero.jpg"
-              alt="photo of Mark Guerrero"
-              width="260"
-            />
-            <h3 class="card-title">Mark Guerrero</h3>
-            <p class="card-category">Product Designer</p>
-          </li>
-          <li class="item">
-            <img src="./images/ford.jpg" alt="photo of Tom Ford" width="260" />
-            <h3 class="card-title">Tom Ford</h3>
-            <p class="card-category">Frontend Developer</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/garcia.jpg"
-              alt="photo of Camila Garcia"
-              width="260"
-            />
-            <h3 class="card-title">Camila Garcia</h3>
-            <p class="card-category">Marketing</p>
-          </li>
-          <li class="item">
-            <img
-              src="./images/wilson.jpg"
-              alt="photo of Daniel Wilson"
-              width="260"
-            />
-            <h3 class="card-title">Daniel Wilson</h3>
-            <p class="card-category">UI Designer</p>
-          </li>
-        </ul>
+      <section class="team">
+        <div class="container">
+          <h2 class="section-ttl">Our Team</h2>
+          <ul class="team-cards list centered">
+            <li class="item">
+              <img
+                src="./images/guerrero.jpg"
+                alt="photo of Mark Guerrero"
+                width="260"
+              />
+              <div class="member-detail">
+                <h3 class="card-title">Mark Guerrero</h3>
+                <p class="card-category">Product Designer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/ford.jpg"
+                alt="photo of Tom Ford"
+                width="260"
+              />
+              <div class="member-detail">
+                <h3 class="card-title">Tom Ford</h3>
+                <p class="card-category">Frontend Developer</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/garcia.jpg"
+                alt="photo of Camila Garcia"
+                width="260"
+              />
+              <div class="member-detail">
+                <h3 class="card-title">Camila Garcia</h3>
+                <p class="card-category">Marketing</p>
+              </div>
+            </li>
+            <li class="item">
+              <img
+                src="./images/wilson.jpg"
+                alt="photo of Daniel Wilson"
+                width="260"
+              />
+              <div class="member-detail">
+                <h3 class="card-title">Daniel Wilson</h3>
+                <p class="card-category">UI Designer</p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
-    <footer class="container page-footer">
+    <footer class="page-footer">
+      <div class="container">
+        <a href="./index.html" class="logo logo-bottom">
+          <span class="logo-start">WEB</span>STUDIO</a
+        >
 
-      <a href="./index.html" class="logo logo-bottom">
-        <span class="logo-start">WEB</span>STUDIO</a
-      >
-
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
