--- a/portfolio.html
+++ b/portfolio.html
@@ -19,23 +19,23 @@
   </head>
 
   <body>
-    <header >
-      <div class="container ">
-      <nav class="main-nav">
-        <a href="./index.html" class="logo">
-          <span class="logo-start">WEB</span>STUDIO</a
-        >
-             
-        <ul class="site-nav list">
-          <li class="item">
-            <a class="link" href="./index.html"> Studio</a>
-          </li>
-          <li class="item">
-            <a class="link" href="./portfolio.html"> Portfolio</a>
-          </li>
-          <li class="item"><a class="link" href=""> Contacts </a></li>
-        </ul>
-      </nav>
+    <header>
+      <div class="container">
+        <nav class="main-nav">
+          <a href="./index.html" class="logo">
+            <span class="logo-start">WEB</span>STUDIO</a
+          >
+
+          <ul class="site-nav list">
+            <li class="item">
+              <a class="link" href="./index.html"> Studio</a>
+            </li>
+            <li class="item">
+              <a class="link" href="./portfolio.html"> Portfolio</a>
+            </li>
+            <li class="item"><a class="link" href=""> Contacts </a></li>
+          </ul>
+        </nav>
         <ul class="contacts list">
           <li class="item">
             <a class="link" href="mailto:info@devstudio.com">
@@ -54,14 +54,18 @@
         <div class="container portfolio">
           <h1 class="visually-hidden">Services</h1>
           <ul class="filters list">
-            <li class="item"><button class="button filter" type="button">All</button></li>
+            <li class="item">
+              <button class="button filter" type="button">All</button>
+            </li>
             <li class="item">
               <button class="button filter" type="button">Web Site</button>
             </li>
             <li class="item">
               <button class="button filter" type="button">App</button>
             </li>
-            <li class="item"><button class="button filter" type="button">Design</button></li>
+            <li class="item">
+              <button class="button filter" type="button">Design</button>
+            </li>
             <li class="item">
               <button class="button filter" type="button">Marketing</button>
             </li>
@@ -177,17 +181,17 @@
       </section>
     </main>
 
-    <footer class=" page-footer">
+    <footer class="page-footer">
       <div class="container">
-            <a href="./index.html" class="logo logo-bottom">
-              <span class="logo-start">WEB</span>STUDIO</a
-            >
-      
-            <p class="footer-text">
-              Increase the flow of customers and sales for your business with digital
-              marketing & growth solutions.
-            </p>
-          </div>
-          </footer>
-        </body>
-      </html>
+        <a href="./index.html" class="logo logo-bottom">
+          <span class="logo-start">WEB</span>STUDIO</a
+        >
+
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
+    </footer>
+  </body>
+</html>
