--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       </section>
 
       <!-- Features  -->
-      <section>
+      <section class="features-section">
         <div class="container">
           <h2 class="visually-hidden">Features</h2>
           <ul class="list features">
@@ -101,7 +101,7 @@
       </section>
 
       <!-- What are we doing -->
-      <section>
+      <section class="category-section">
         <div class="container">
           <h2 class="section-ttl">What are we doing</h2>
           <ul class="category list">
@@ -141,7 +141,7 @@
               <img
                 src="./images/guerrero.jpg"
                 alt="photo of Mark Guerrero"
-                width="260"
+                width="264"
               />
               <div class="member-detail">
                 <h3 class="card-title">Mark Guerrero</h3>
@@ -152,7 +152,7 @@
               <img
                 src="./images/ford.jpg"
                 alt="photo of Tom Ford"
-                width="260"
+                width="264"
               />
               <div class="member-detail">
                 <h3 class="card-title">Tom Ford</h3>
@@ -163,7 +163,7 @@
               <img
                 src="./images/garcia.jpg"
                 alt="photo of Camila Garcia"
-                width="260"
+                width="264"
               />
               <div class="member-detail">
                 <h3 class="card-title">Camila Garcia</h3>
@@ -174,7 +174,7 @@
               <img
                 src="./images/wilson.jpg"
                 alt="photo of Daniel Wilson"
-                width="260"
+                width="264"
               />
               <div class="member-detail">
                 <h3 class="card-title">Daniel Wilson</h3>
