--- a/portfolio.html
+++ b/portfolio.html
@@ -50,8 +50,8 @@
     </header>
 
     <main>
-      <section>
-        <div class="container portfolio">
+      <section class="portfolio">
+        <div class="container">
           <h1 class="visually-hidden">Services</h1>
           <ul class="filters list">
             <li class="item">
